--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Battleship</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="lib/kotlin.js"></script>
     <script src="lib/stdlib.meta.js"></script>
+    <script src="lib/Yested.js"></script>
+    <script src="lib/Yested.meta.js"></script>
 </head>
 <body>
     <p id="main"></p>
