Create example with table and click listener

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
     <script src="lib/Yested.meta.js"></script>
 </head>
 <body>
-    <p id="main"></p>
+    <div id="app"></div>
     <!-- Must be last -->
     <script src="frontend.js"></script>
 </body>
