--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,31 @@
     <script src="lib/stdlib.meta.js"></script>
     <script src="lib/Yested.js"></script>
     <script src="lib/Yested.meta.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+        #app {
+            width: 600px;
+            height: 600px;
+            margin: 50px auto;
+        }
+        .table {
+            display: table;
+            width: 100%;
+            height: 100%;
+            border: 1px solid black;
+        }
+        .row {
+            display: table-row;
+        }
+        .cell {
+            display: table-cell;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
