Make it possible to draw ships

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,6 +33,24 @@
             display: table-cell;
             border: 1px solid black;
         }
+        .invalid {
+            background: url(img/circle.svg);
+        }
+        .left {
+            background: url(img/left.svg);
+        }
+        .right {
+            background: url(img/right.svg);
+        }
+        .up {
+            background: url(img/up.svg);
+        }
+        .down {
+            background: url(img/down.svg);
+        }
+        .middle {
+            background: url(img/square.svg);
+        }
     </style>
 </head>
 <body>
