--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,14 +16,12 @@
             border: 0;
         }
         #app {
-            width: 600px;
-            height: 600px;
-            margin: 50px auto;
         }
         .table {
             display: table;
-            width: 100%;
-            height: 100%;
+            width: 400px;
+            height: 400px;
+            margin: 50px auto;
             border: 1px solid black;
         }
         .row {
@@ -42,14 +40,31 @@
         .right {
             background: url(img/right.svg);
         }
-        .up {
+        .top {
             background: url(img/up.svg);
         }
-        .down {
+        .bottom {
             background: url(img/down.svg);
         }
         .middle {
             background: url(img/square.svg);
+        }
+        .start {
+            background: url(img/circle.svg);
+        }
+        input {
+            display: block;
+            border: 1px solid black;
+            width: 200px;
+            margin: 20px auto;
+        }
+        .button {
+            cursor: pointer;
+            border: 1px solid black;
+            width: 200px;
+            padding: 20px;
+            margin: 20px auto;
+            text-align: center;
         }
     </style>
 </head>
