--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -52,6 +52,12 @@
         .start {
             background: url(img/circle.svg);
         }
+        .hit {
+            background: #F00;
+        }
+        .miss {
+            background: #00F;
+        }
         input {
             display: block;
             border: 1px solid black;
@@ -65,6 +71,11 @@
             padding: 20px;
             margin: 20px auto;
             text-align: center;
+        }
+        .text {
+            margin: 20px auto;
+            text-align: center;
+            font-size: 20px;
         }
     </style>
 </head>
